@@ -6,6 +6,7 @@ pulseaudio (5.0-3) UNRELEASED; urgency=medium
   * debian/patches/0003-exit-with-X-session.patch
     - Kill pulseaudio on session exit with kde too
     - Add DEP-3 header, forwarded
+  * Enable testsuite
 
  -- Felipe Sateler <fsateler@debian.org>  Mon, 14 Apr 2014 10:02:36 -0300
 
